add categories feature and categories component

--- a/staff/groups/le-sky-martini-inc/memefy/index.html
+++ b/staff/groups/le-sky-martini-inc/memefy/index.html
@@ -22,6 +22,14 @@
     <script src="logic/register-user/index.js"></script>
     <script src="logic/authenticate-user/index.js"></script>
     <script src="logic/retrieve-user/index.js"></script>
+    <script src="logic/cat-animals/index.js"></script>
+    <script src="logic/cat-baby/index.js"></script>
+    <script src="logic/cat-cats/index.js"></script>
+    <script src="logic/cat-celebrate/index.js"></script>
+    <script src="logic/cat-dogs/index.js"></script>
+    <script src="logic/cat-morning/index.js"></script>
+    <script src="logic/cat-sports/index.js"></script>
+    <script src="logic/cat-think/index.js"></script>
     <script src="logic/search-gifs/index.js"></script>
     <script src="logic/retrieve-gif/index.js"></script>
     <script src="logic/toggle-fav-gif/index.js"></script>
@@ -33,6 +41,7 @@
     <script src="components/register-success.jsx" type="text/babel"></script>
     <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/search.jsx" type="text/babel"></script>
+    <script src="components/categories.jsx" type="text/babel"></script>
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/gif-item.jsx" type="text/babel"></script>
     <script src="components/gif-detail.jsx" type="text/babel"></script>
