add categories -  delete per categories logics - adapt to random

--- a/staff/groups/le-sky-martini-inc/memefy/index.html
+++ b/staff/groups/le-sky-martini-inc/memefy/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style/index.css">
+    <script src="https://kit.fontawesome.com/0ebe3f9bf2.js"></script>
 </head>
 
 <body>
@@ -22,29 +23,24 @@
     <script src="logic/register-user/index.js"></script>
     <script src="logic/authenticate-user/index.js"></script>
     <script src="logic/retrieve-user/index.js"></script>
-    <script src="logic/cat-animals/index.js"></script>
-    <script src="logic/cat-baby/index.js"></script>
-    <script src="logic/cat-cats/index.js"></script>
-    <script src="logic/cat-celebrate/index.js"></script>
-    <script src="logic/cat-dogs/index.js"></script>
-    <script src="logic/cat-morning/index.js"></script>
-    <script src="logic/cat-sports/index.js"></script>
-    <script src="logic/cat-think/index.js"></script>
     <script src="logic/search-gifs/index.js"></script>
     <script src="logic/retrieve-gif/index.js"></script>
     <script src="logic/toggle-fav-gif/index.js"></script>
     <script src="logic/retrieve-fav-gifs/index.js"></script>
+    <script src="logic/get-random/index.js"></script>
     <script src="components/app.jsx" type="text/babel"></script>
-    <script src="components/registerorlogin.jsx" type="text/babel"></script>
+    <script src="components/register-or-login.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
     <script src="components/register.jsx" type="text/babel"></script>
     <script src="components/register-success.jsx" type="text/babel"></script>
     <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/search.jsx" type="text/babel"></script>
     <script src="components/categories.jsx" type="text/babel"></script>
+    <script src="components/random.jsx" type="text/babel"></script>
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/gif-item.jsx" type="text/babel"></script>
     <script src="components/gif-detail.jsx" type="text/babel"></script>
+    <script src="components/random-detail.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
     <script src="components/fav-button.jsx" type="text/babel"></script>
     <script src="components/modal/index.jsx" type="text/babel"></script>
