--- a/staff/groups/le-sky-martini-inc/memefy/SpecRunner.html
+++ b/staff/groups/le-sky-martini-inc/memefy/SpecRunner.html
@@ -11,7 +11,6 @@
   <script src="vendor/jasmine/jasmine-3.4.0/jasmine-html.js"></script>
   <script src="vendor/jasmine/jasmine-3.4.0/boot.js"></script>
 
-  <!-- include source files here... FALTA RANDOM -->
   <script src="utils/call/index.js"></script>
   <script src="logic/index.js"></script>
   <script src="logic/register-user/index.js"></script>
@@ -21,11 +20,10 @@
   <script src="logic/retrieve-gif/index.js"></script>
   <script src="logic/toggle-fav-gif/index.js"></script>
   <script src="logic/retrieve-fav-gifs/index.js"></script>
+  <script src="logic/get-random/index.js"></script>
   <script src="logic/cat-animals/index.js"></script>
 
- 
 
-  <!-- FALTA RANDOM include spec files here... -->
   <script src="utils/call/index.spec.js"></script>
   <script src="utils/validate/index.js"></script>
   <script src="logic/register-user/index.spec.js"></script>
@@ -35,6 +33,7 @@
   <script src="logic/retrieve-gif/index.spec.js"></script>
   <script src="logic/toggle-fav-gif/index.spec.js"></script>
   <script src="logic/retrieve-fav-gifs/index.spec.js"></script>
+  <script src="logic/get-random/index.spec.js"></script>
   <script src="logic/cat-animals/index.spec.js"></script>
 </head>
 
