usersettings unfinished shit

--- a/staff/groups/le-sky-martini-inc/memefy/index.html
+++ b/staff/groups/le-sky-martini-inc/memefy/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <div id="root"></div>
-
+    
     <script src="vendor/react/16.8.6/react.development.js"></script>
     <script src="vendor/react/16.8.6/react-dom.development.js"></script>
     <script src="vendor/babel/7.5.5/babel.min.js"></script>
-
+    
     <script src="utils/validate/index.js"></script>
     <script src="utils/call/index.js"></script>
     <script src="logic/index.js"></script>
@@ -27,15 +27,20 @@
     <script src="logic/toggle-fav-gif/index.js"></script>
     <script src="logic/retrieve-fav-gifs/index.js"></script>
     <script src="components/app.jsx" type="text/babel"></script>
+    <script src="components/registerorlogin.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
     <script src="components/register.jsx" type="text/babel"></script>
     <script src="components/register-success.jsx" type="text/babel"></script>
+    <script src="components/user-edit-profile.jsx" type="text/babel"></script>
+    <script src="components/user-edit-password.jsx" type="text/babel"></script>
+    <script src="components/user-delete-account.jsx" type="text/babel"></script>
     <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/search.jsx" type="text/babel"></script>
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/gif-item.jsx" type="text/babel"></script>
     <script src="components/gif-detail.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
+    <script src="components/user.jsx" type="text/babel"></script>
     <script src="components/fav-button.jsx" type="text/babel"></script>
     <script src="components/modal/index.jsx" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
