--- a/staff/groups/le-sky-martini-inc/memefy/SpecRunner.html
+++ b/staff/groups/le-sky-martini-inc/memefy/SpecRunner.html
@@ -11,27 +11,40 @@
   <script src="vendor/jasmine/jasmine-3.4.0/jasmine-html.js"></script>
   <script src="vendor/jasmine/jasmine-3.4.0/boot.js"></script>
 
-  <!-- include source files here... -->
+  <!-- include source files here... FALTA RANDOM -->
   <script src="utils/call/index.js"></script>
   <script src="logic/index.js"></script>
   <script src="logic/register-user/index.js"></script>
   <script src="logic/authenticate-user/index.js"></script>
+  <script src="logic/user-delete/index.js"></script>
+  <script src="logic/user-changes/index.js"></script>
   <script src="logic/retrieve-user/index.js"></script>
   <script src="logic/search-gifs/index.js"></script>
   <script src="logic/retrieve-gif/index.js"></script>
   <script src="logic/toggle-fav-gif/index.js"></script>
   <script src="logic/retrieve-fav-gifs/index.js"></script>
+  <!-- <script src="logic/cat-animals/index.js"></script>
+  <script src="logic/cat-baby/index.js"></script> -->
+  <script src="logic/random-gif/index.js"></script>
 
-  <!-- include spec files here... -->
+ 
+
+  <!-- FALTA RANDOM include spec files here... -->
   <script src="utils/call/index.spec.js"></script>
   <script src="utils/validate/index.js"></script>
   <script src="logic/register-user/index.spec.js"></script>
   <script src="logic/authenticate-user/index.spec.js"></script>
+  <script src="logic/user-delete/index.spec.js"></script>
+  <script src="logic/user-changes/index.spec.js"></script>
   <script src="logic/retrieve-user/index.spec.js"></script>
   <script src="logic/search-gifs/index.spec.js"></script>
   <script src="logic/retrieve-gif/index.spec.js"></script>
   <script src="logic/toggle-fav-gif/index.spec.js"></script>
   <script src="logic/retrieve-fav-gifs/index.spec.js"></script>
+  <!-- <script src="logic/cat-animals/index.spec.js"></script>
+  <script src="logic/cat-baby/index.spec.js"></script> -->
+  <script src="logic/random-gif/index.spec.js"></script>
+
 </head>
 
 <body>
